--- a/public/css/style.css
+++ b/public/css/style.css
@@ -204,6 +204,12 @@ ol {
 	color: #fff;
 }
 
+.text {
+	padding-right: 200px;
+	padding-left: 200px;
+	padding-bottom: 300px;
+}
+
 /*---------------------
   Commom elements
 -----------------------*/
