--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -16811,7 +16811,7 @@ fieldset[disabled] .btn.active {
 .btn-primary {
   border: 1px solid #447DF7;
   color: #FFFFFF;
-  background-color: #eb933b;
+  background-color: #447DF7;
   cursor: pointer;
 }
 
@@ -28235,12 +28235,8 @@ select.selectpicker {
   border-radius: 3px;
   background: #FFF;
   cursor: default;
-  -webkit-box-shadow: inset 0 0 1px #FFF,
- inset 0 1px 7px #EBEBEB,
- 0 3px 6px -3px #BBB;
-          box-shadow: inset 0 0 1px #FFF,
- inset 0 1px 7px #EBEBEB,
- 0 3px 6px -3px #BBB;
+  -webkit-box-shadow: inset 0 0 1px #FFF, inset 0 1px 7px #EBEBEB, 0 3px 6px -3px #BBB;
+          box-shadow: inset 0 0 1px #FFF, inset 0 1px 7px #EBEBEB, 0 3px 6px -3px #BBB;
   -webkit-transition: 300ms ease 0s;
   -moz-transition: 300ms ease 0s;
   -ms-transition: 300ms ease 0s;
